infrastructure/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: svm
  labels:
    app.kubernetes.io/name: supervisor-visit-management
